Simplifies the code, fixes a bug on upper with jumping to 0.

--- a/css/transactions.css
+++ b/css/transactions.css
@@ -50,7 +50,7 @@ input[value=Save]:focus, input[value=Close]:focus {
 }
 
 #gnucash_csv_range {
-	width: 300px;
+	width: 351px;
 }
 
 #range_slider {
